Layout changes made for playlist browse and edit

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -38,10 +38,39 @@ h2 {
   color: #fff;
 }
 
-.App-playlist {
-  display: flex;
+.App-funcareas {
+  display: inline-flex;
+  flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  margin-top: 3rem;
+}
+
+.App-playlist {
+  display: flex;
+  flex-direction: column;
+  width: 48%;
+  background-color: rgba(1, 12, 63, 0.7);
+  box-shadow: 0 4px 2px 2px #000000;
+  align-items: center;
+}
+
+.App-playlistbrowser {
+  display: flex;
+  flex-direction: row;
+  width: 98%;
+  height: 100%;
+  /* margin: 0% 2% 2% 2%; */
+  margin-bottom: 1%;
+}
+
+.App-searcharea {
+  display: flex;
+  flex-direction: column;
+  width: 48%;
+  background-color: rgba(1, 12, 63, 0.7);
+  box-shadow: 0 4px 2px 2px #000000;
+  align-items: center;
 }
 
 @media only screen and (max-width: 1020px) {
