--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -1,20 +1,27 @@
 .SearchBar {
+  width: 94%;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
-  padding-top: 6.94rem;
-  margin-bottom: 6.33rem;
+  /* padding-top: 6.94rem; */
+  padding: 2%;
+  /* margin-bottom: 6.33rem; */
+  background-color: rgba(92, 104, 155, 0.2);
+  margin-top: 1%;
 }
   
 .SearchBar input {
-  width: 287px;
-  padding: .88rem 0;
-  border: 1px solid #fff;
-  border-radius: 3px;
-  margin-bottom: 2.22rem;
+  width: 85%;
+  height: 2rem;
+  /* padding: .88rem 0; */
+  /* border: 1px solid #fff; */
+  border: 0px;
+  /* border-radius: 3px; */
+  /* margin-bottom: 2.22rem; */
   color: #010c3f;
   text-align: center;
   font-size: 1rem;
+  box-sizing: border-box;
 }
   
 .SearchBar input:focus {
@@ -23,16 +30,18 @@
   
 .SearchButton {
   cursor: pointer;
-  width: 8.11rem;
-  padding: .77rem 0;
-  border-radius: 54px;
+  min-width: 6rem;
+  width: 15%;
+  height: 2rem;
+  /* padding: .88rem 0; */
+  /* border-radius: 54px; */
   background-color: #010c3f;
   text-align: center;
   font-size: .833rem;
   transition: background-color .25s;
   border: 0px;
   color: #fff;
-  font-weight: 500;
+  font-weight: 600;
 }
   
 .SearchButton:hover {
