--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -1,10 +1,11 @@
 .SearchResults {
-    width: 50%;
+    width: 94%;
     height: 950px;
     overflow-y: scroll;
-    padding: .88rem;
+    padding: 2%;
     background-color: rgba(1, 12, 63, 0.7);
-    box-shadow: 0 4px 2px 2px #000000;
+    /* box-shadow: 0 4px 2px 2px #000000; */
+    margin-bottom: 1%;
 }
   
 ::-webkit-scrollbar {
