--- a/src/Components/PlaylistBrowse/PlaylistBrowse.css
+++ b/src/Components/PlaylistBrowse/PlaylistBrowse.css
@@ -1,12 +1,11 @@
 .PlaylistBrowse {
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     align-items: top;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
+    border-right: 2px solid rgba(256,256,256,0.15);
     width: 35%;
     max-height: 950px;
-    /* padding: 2.27rem 1.16rem; */
-    padding: 2%;
+    padding: 2% 3% 2% 2%;
     background-color: rgba(1, 12, 63, 0.7);
-    /* box-shadow: 0 4px 2px 2px #000000; */
 }
